# DocTemplater

./: .gitignore  config.py  main.py  pyproject.toml  shell.nix
app_logic/: __init__.py  table.py  types.py  ui.py
app_logic/processing/: data.py  data_operations.py  docx.py  docx_creation.py
assets/templates/: base.docx
scripts/: nuitka_flet.yml
ui/: datepicker.py  templates.py
ui/tabs/: edit_document.py  edit_documents.py  edit_questions.py
