[project]
name = "doctemplater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2python>=3.5.0",
    "docxtpl>=0.19.1",
    "flet[all]>=0.28.3",
    "platformdirs>=4.3.8",
]

[dependency-groups]
dev = [
    "flet[all]>=0.27.6",
]
